--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".NamantaraApp"
@@ -15,6 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Namantaraday1"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.home.MainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main" />
         <activity
             android:name=".ui.signup.SignupActivity"
             android:exported="false" />
